--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: LiebermanAidenHiC2009
 Title: Selected data from the HiC paper of E. Lieberman-Aiden et al. in Science (2009)
-Version: 0.1.5
+Version: 0.1.6
 Author: Wolfgang Huber, Felix Klein
 Maintainer: Felix Klein <fklein@embl.de>
-Description: This package provides .... data that were presented in
+Description: This package provides data that were presented in
   the article "Comprehensive mapping of long-range interactions reveals
   folding principles of the human genome", Science 2009 Oct 9;326(5950):289-93. PMID: 19815776
 biocViews: ExperimentData
 License: LGPL
-Depends: 
+Depends: KernSmooth, IRanges
 Suggests: 
